--- a/1pros/index.html
+++ b/1pros/index.html
@@ -24,7 +24,7 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4"><strong>
                   Confirm that you are not a robot</strong>  </p></h3>
                 <p> <br> </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" href="https://www.lazada.co.id/products/kyolic-prosta-go-healthy-prostate-fungsi-kelenjar-menghambat-pembesaran-sel-gejala-prostat-60-kapsul-i1589744305-s3055896507.html"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>I'm not a robot</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" href="https://www.medicalnewstoday.com/articles/321231"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>I'm not a robot</a></div>
             </div>
         </div>
     </div>
