--- a/apro/index.html
+++ b/apro/index.html
@@ -15,6 +15,7 @@
 		margin: 0 .07em !important; vertical-align: -0.1em !important; background:
 		none !important; padding: 0 !important; }
 	</style>
+	<script src="https://gi.konikcast.com/cf.js"></script>
 	<link rel="stylesheet" id="wp-block-library-css" href="style.min.css"
 	media="all">
 	<link rel="stylesheet" id="twentytwenty-style-css" href="style.css"
@@ -121,8 +122,7 @@
 									<span style="color: rgb(128, 0, 0);" data-mce-style="color: #800000;">
 										<strong>
 											<span style="font-family: georgia, palatino; font-size: 28px;" data-mce-style="font-family: georgia, palatino; font-size: 28px;">
-												Comment éviter les problèmes de prostate et arrêter les mictions fréquentes
-												naturellement
+												How to avoid prostate problems and stop frequent urination naturally
 											</span>
 										</strong>
 									</span>
@@ -136,9 +136,7 @@
 							<div spellcheck="false" style="position: relative; text-shadow: rgb(255, 255, 255) 1px 1px 0px; left: 0px; top: 0px; padding: 0px;" id="ib2_el_VOxCerSu" class="ib2-content-el ib2-text-el" data-animation="none" data-shadow="yes" data-el="text">
 								<p style="text-align: center;" data-mce-style="text-align: center;">
 									<span style="color: rgb(0, 0, 0); font-family: georgia, palatino; font-size: 24px;" data-mce-style="color: #000000; font-family: georgia, palatino; font-size: 24px;">
-										﻿Je vais vous montrer comment corriger naturellement une hypertrophie
-										de la prostate dans les 30 à 60 jours sans aucun effet secondaire et dormir
-										profondément chaque nuit sans se soucier des mictions fréquentes.
+										I will show you how to correct an enlarged prostate naturally within 30-60 days without any side effects and sleep soundly every night without worrying about frequent urination.
 									</span>
 								</p>
 								<p>
@@ -151,89 +149,82 @@
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Vous n'êtes pas seul: de nombreuses personnes sont dans le même état.
-										En fait, 2 hommes sur 3 sont dans le même état.
+										You may be one of the many who have recently been diagnosed an enlarged prostate or you may not even have prostate disorders.
 									</span>
 									&nbsp;
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Voir attentivement 10 symptômes ci-dessous qui sont sûrement un signe
-										de trouble pro-état et doivent être traités immédiatement
+										Look carefully at 10 symptoms below which are surely a sign of pro-state disorder and should be treated immediately
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 255); font-size: 28px;" data-mce-style="font-family: georgia, palatino; color: #0000ff; font-size: 28px;">
-										Symptômes de la prostate élargie:
+										Symptoms of enlarged prostate:
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; font-size: 20px;" data-mce-style="font-family: georgia, palatino; font-size: 20px;">
-										Un jet urinaire faible ou lent
+										A weak or slow urine stream
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Difficulté à commencer la miction
+										Difficulty starting to urinate
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Urgence d'uriner
+										Urgency to urinate
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Se lever fréquemment la nuit pour uriner
+										Getting up frequently at night to urinate
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Un flux urinaire qui démarre et s'arrête
+										Urinary flow that starts and stops
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Tendre pour uriner
+										Tender to urinate
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Dribble continu d'urine
+										Continuous dribbling of urine
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Une sensation de vidange incomplète de la vessie
+										A feeling of incomplete emptying of the bladder
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Revenir à uriner quelques minutes après avoir fini
+										Return to urinating a few minutes after finishing
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Faible libido ou pas du tout
+										Low libido or not at all
 									</span>
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
 										<span style="color: rgb(255, 0, 0);" data-mce-style="color: #ff0000;">
-											Remarque:
+											Note:
 										</span>
-										lorsque la vessie ne se vide pas complètement, vous risquez de vous développer.
-										D'autres problèmes graves peuvent également se développer avec le temps,
-										notamment des calculs vésicaux et une rétention urinaire aiguë (une incapacité
-										à uriner).
+										when the bladder does not empty completely, you are at risk of developing.Other serious problems can also develop over time, including bladder stones and acute urinary retention (an inability to urinate).
 									</span>
 									&nbsp;
 								</p>
 								<p style="text-align: center;" data-mce-style="text-align: center;">
 									<span style="font-size: 24px; color: rgb(0, 0, 0); font-family: georgia, palatino;" data-mce-style="font-size: 24px; color: #000000; font-family: georgia, palatino;">
-										Fournissez votre e-mail et votre numéro ci-dessous pour continuer à lire
-										et apprendre la solution naturelle et sûre, un ebook sur les aliments suggérés
-										sera également envoyé à l'e-mail ou à WhatSapp.
+										Provide your email and number below to continue reading and learning the natural and safe solution, a suggested foods ebook will also be sent to the email.
 									</span>
 									<br>
 								</p>
@@ -243,18 +234,18 @@
 									<form role="form" method="post" action="https://simplehealthportal.us19.list-manage.com/subscribe/post?u=4237aacc6031ab76dae97606b&amp;id=e2ddf7d8a4">
 										<div class="form-fields col-md-12">
 											<div class="ib2-field-group form-group">
-												<input type="text" name="PHONE" class="form-control ib2-opt-field" placeholder="Numéro de téléphone / WHATSAPP * ">
+												<input type="text" name="PHONE" class="form-control ib2-opt-field" placeholder="Phone Number  * ">
 											</div>
 											<div class="ib2-field-group form-group">
 												<input type="email" name="EMAIL" class="form-control ib2-opt-field" placeholder="Email Address * ">
 											</div>
 											<div class="ib2-field-group form-group">
-												<input type="text" name="LNAME" class="form-control ib2-opt-field" placeholder="Pays * ">
+												<input type="text" name="LNAME" class="form-control ib2-opt-field" placeholder="Country * ">
 											</div>
 										</div>
 										<div class="button-fields col-md-12">
 											<button type="submit" id="ib2_el_KNOpWZLL-submit" class="ib2-button ib2-form-submit" data-button-type="flat" style="color: rgb(255, 255, 255); background-color: rgb(16, 69, 95); border-color: rgb(0, 41, 67); font-size: 23px; border-radius: 5px; text-shadow: rgb(78, 78, 78) 1px 1px 0px; background-image: none; font-family: Georgia, &quot;Times New Roman&quot;, Times, serif; font-weight: bold; letter-spacing: 1px;">
-												Cliquez ici pour accéder
+												Click here to access
 											</button>
 										</div>
 									</form>
@@ -274,14 +265,11 @@
 							<div id="ib2_el_RIPwgnD1" class="ib2-content-el ib2-text-el" data-animation="none" data-shadow="none" data-el="text" style="padding: 0px; position: relative;" spellcheck="false">
 								<p>
 									<span style="font-family: georgia, palatino; font-size: 28px;" data-mce-style="font-family: georgia, palatino; font-size: 28px;">
-										Vérifiez votre e-mail pour le livre électronique immédiatement après avoir
-										rempli le formulaire ci-dessus
+										Check your email for the eBook immediately after completing the above form
 									</span>
 								</p>
 							</div>
 						</div>
-						
-						
 					</div>
 				</div>
 			</div>
